<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>se77</groupId>
	<artifactId>java-19-playground</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<junit-jupiter.version>5.9.1</junit-jupiter.version>
		<maven.compiler.source>19</maven.compiler.source>
		<maven.compiler.target>19</maven.compiler.target>
	</properties>

	<dependencies>
		<!-- JUnit 5 Dependency -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit-jupiter.version}</version>
		</dependency>

		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest</artifactId>
			<version>2.2</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<!-- This maven-compiler-plugin configuration enables the preview-mode for the preview features
			and the incubator packages for new incubator features. -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<compilerArgs>
						<arg>--enable-preview</arg>
						<arg>--add-modules</arg>
						<arg>jdk.incubator.vector</arg>
					</compilerArgs>
					<verbose>true</verbose>
					<fork>true</fork>
					<showDeprecation>true</showDeprecation>
					<failOnError>true</failOnError>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>

			<!-- This maven-surefire-plugin configuration enables the preview-mode for the preview features -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
					</includes>
					<reuseForks>true</reuseForks>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>